--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Joel Auterson <joel.auterson@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "growl": "^1.10.5",
+    "hoek": "^5.0.3",
     "request": "^2.72.0"
   },
   "devDependencies": {
